fix: make button smaller AB#15404

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -69,7 +69,7 @@
   },
   "chat-component": {
     "generic": {
-      "revert-selection": "Back to all areas"
+      "revert-selection": "All"
     },
     "floods": {
       "about-button-label": "About Trigger",
