feat: add tasks title aAB#10693

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -60,7 +60,8 @@
     "exposed-subgroups": ""
   },
   "areas-of-focus-summary-component": {
-    "title": "Actions Summary"
+    "title": "Actions Summary",
+    "tasks-title": "Tasks Completed"
   },
   "ibf-guide-component": {
     "title": "IBF Guide",
