feat: update track popup AB#15533

--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -1080,5 +1080,18 @@
         }
       }
     }
+  },
+  "map-popups": {
+    "PHL": {
+      "typhoon": {
+        "category": {
+          "TD": "Tropical depression",
+          "TS": "Tropical storm",
+          "STS": "Severe tropical storm",
+          "TY": "Typhoon",
+          "ST": "Super typhoon"
+        }
+      }
+    }
   }
 }
