--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -51,7 +51,7 @@
   "areas-of-focus-summary-component": {
     "title": "Actions Summary",
     "aof-subtitle": "Area of Focus",
-    "tasks-subtitle": "Tasks Completed"
+    "tasks-subtitle": "Actions Completed"
   },
   "ibf-guide-component": {
     "title": "IBF Guide",
