--- a/interfaces/IBF-dashboard/src/assets/i18n/en.json
+++ b/interfaces/IBF-dashboard/src/assets/i18n/en.json
@@ -962,7 +962,7 @@
       },
       "typhoon_track": {
         "PHL": {
-          "typhoon": "<p>Forecasted track of the Typhoon event. The source for this forecast data is ECMWF.</p><br><p><strong>Legend:</strong></p><ul><li>the <strong>larger typhoon icon</strong> track point shows the <strong>latest location</strong> of the typhoon</li><li><strong>full color</strong> track points show where the typhoon has <strong>already passed</strong></li><li><strong>transparent</strong> track points show the future <strong>predicted path</strong> of the typhoon</li></ul>"
+          "typhoon": "<p>Forecasted track of the Typhoon event. The source for this forecast data is ECMWF.</p><br><p><strong>Trackpoint legend:</strong></p><ul><li><strong>Circle with typhoon icon</strong> shows the latest location of the typhoon</li><li><strong>Full color circle</strong> shows where the typhoon has already passed</li><li><strong>Transparent dashed circle</strong> shows the future predicted path of the typhoon</li></ul>"
         }
       },
       "vegetation_condition": {
